--- a/config-service/src/main/resources/config/monitor-service.yml
+++ b/config-service/src/main/resources/config/monitor-service.yml
@@ -25,7 +25,9 @@ spring:
         instance:
           service-base-url: http://${MONITOR_HOST:localhost}:${server.port}
       discovery:
-        ignored-services: consul  # 或略consul服务
+        ignored-services: consul  # 忽略consul服务
+      ui:
+        title: monitor-service
   # sleuth 配置
   sleuth:
     web:
