--- a/common/common-core/pom.xml
+++ b/common/common-core/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.github.tangyi</groupId>
         <artifactId>common</artifactId>
-        <version>3.1.0</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>common-core</artifactId>
     <name>${project.artifactId}</name>
