--- a/docker-compose-base.yml
+++ b/docker-compose-base.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 services:
   # ---------------------------
   # consul集群，3个节点
@@ -70,7 +70,7 @@ services:
   # 配置中心
   # ---------------------------
   config-service:
-    image: registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/config-service:3.1.0
+    image: registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/config-service:3.2.0-SNAPSHOT
     container_name: config-service
     env_file: docker-compose.env  # 从文件中获取配置
     restart: always
