--- a/docker-compose-services.yml
+++ b/docker-compose-services.yml
@@ -1,10 +1,10 @@
-version: '2'
+version: '3'
 services:
   # ---------------------------
   # api网关
   # ---------------------------
   gateway-service:
-    image: registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/gateway-service:3.1.0
+    image: registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/gateway-service:3.2.0-SNAPSHOT
     container_name: gateway-service
     env_file: docker-compose.env  # 从文件中获取配置
     restart: always
@@ -17,7 +17,7 @@ services:
   # 授权服务
   # ---------------------------
   auth-service:
-    image: registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/auth-service:3.1.0
+    image: registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/auth-service:3.2.0-SNAPSHOT
     container_name: auth-service
     env_file: docker-compose.env  # 从文件中获取配置
     restart: always
@@ -30,7 +30,7 @@ services:
   # 用户服务
   # ---------------------------
   user-service:
-    image: registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/user-service:3.1.0
+    image: registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/user-service:3.2.0-SNAPSHOT
     container_name: user-service
     env_file: docker-compose.env  # 从文件中获取配置
     restart: always
@@ -43,7 +43,7 @@ services:
   # 考试服务
   # ---------------------------
   exam-service:
-    image: registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/exam-service:3.1.0
+    image: registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/exam-service:3.2.0-SNAPSHOT
     container_name: exam-service
     env_file: docker-compose.env  # 从文件中获取配置
     restart: always
@@ -56,7 +56,7 @@ services:
   # 消息服务
   # ---------------------------
   msc-service:
-    image: registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/msc-service:3.1.0
+    image: registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/msc-service:3.2.0-SNAPSHOT
     container_name: msc-service
     env_file: docker-compose.env  # 从文件中获取配置
     restart: always
@@ -69,7 +69,7 @@ services:
   # 监控服务
   # ---------------------------
   monitor-service:
-    image: registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/monitor-service:3.1.0
+    image: registry.cn-hangzhou.aliyuncs.com/spring-microservice-exam/monitor-service:3.2.0-SNAPSHOT
     container_name: monitor-service
     env_file: docker-compose.env  # 从文件中获取配置
     restart: always
