--- a/docker-compose.env
+++ b/docker-compose.env
@@ -1,12 +1,12 @@
 # JVM参数
 # 可通过docker-compose -f docker-compose-services.yml config命令查看是否生效
-JAVA_OPTS=-Xmx512m -Xms256m
+JAVA_OPTS=-Xmx128m -Xms128m
 
 # 租户标识，默认gitee
 TENANT_CODE=gitee
 
 # 网关token转换
-GATEWAY_TOKEN_TRANSFER=true
+GATEWAY_TOKEN_TRANSFER=false
 
 # 环境配置
 SPRING_PROFILES_ACTIVE=native
@@ -26,17 +26,21 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 
 # 数据库配置
-MYSQL_HOST=localhost
+MYSQL_HOST=mysql
 MYSQL_PORT=3306
-MYSQL_USERNAME=platform
+MYSQL_USERNAME=root
 MYSQL_PASSWORD=11
 
 # FDFS配置
-FDFS_HOST=localhost
+FDFS_HOST=fdfs
 FDFS_PORT=22122
 
+# 配置中心的账号密码
+CONFIG_SERVER_USERNAME=admin
+CONFIG_SERVER_PASSWORD=11
+
 # 附件服务器配置
-ATTACHMENT_HOST=http:#localhost
+ATTACHMENT_HOST=http://attachment-service:8080
 ATTACHMENT_PORT=80
 
 # 各服务host配置
@@ -54,7 +58,7 @@ ADMIN_USERNAME=admin
 ADMIN_PASSWORD=11
 
 # zipkin配置
-ZIPKIN_HOST=localhost
+ZIPKIN_HOST=zipkin-service
 ZIPKIN_PORT=9411
 
 # 演示环境
@@ -66,3 +70,6 @@ CLUSTER_DATA_CENTER_ID=1
 
 # 时区设置，否则容器里的时间和主机时间差8小时
 TZ=Asia/Shanghai
+
+# elk配置
+ELK_DESTINATION=localhost:5044
