--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.github.tangyi</groupId>
         <artifactId>spring-microservice-exam</artifactId>
-        <version>3.1.0</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>gateway-service</artifactId>
     <name>${project.artifactId}</name>
