--- a/gateway-service/src/main/resources/bootstrap.yml
+++ b/gateway-service/src/main/resources/bootstrap.yml
@@ -17,3 +17,5 @@ spring:
         enabled: true
         # 指向配置中心在consul注册的服务名称（即：spring.application.name）
         service-id: config-service
+      username: ${CONFIG_SERVER_USERNAME:admin}
+      password: ${CONFIG_SERVER_PASSWORD:11}
