--- a/modules/exam-service-parent/exam-service/pom.xml
+++ b/modules/exam-service-parent/exam-service/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.github.tangyi</groupId>
         <artifactId>exam-service-parent</artifactId>
-        <version>3.1.0</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>exam-service</artifactId>
     <name>${project.artifactId}</name>
