--- a/modules/msc-service-parent/msc-service-api/pom.xml
+++ b/modules/msc-service-parent/msc-service-api/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.tangyi</groupId>
         <artifactId>msc-service-parent</artifactId>
-        <version>3.1.0</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>msc-service-api</artifactId>
     <name>${project.artifactId}</name>
