--- a/modules/user-service-parent/pom.xml
+++ b/modules/user-service-parent/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>com.github.tangyi</groupId>
         <artifactId>modules</artifactId>
-        <version>3.1.0</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>user-service-parent</artifactId>
     <name>${project.artifactId}</name>
