--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.github.tangyi</groupId>
     <artifactId>spring-microservice-exam</artifactId>
-    <version>3.1.0</version>
+    <version>${revision}</version>
     <packaging>pom</packaging>
-
     <name>spring-microservice-exam</name>
     <description>微服务在线考试系统</description>
     <url>https://gitee.com/wells2333/spring-micoservices-exam.git</url>
@@ -32,11 +30,13 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.3.RELEASE</version>
+        <version>2.1.7.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
+        <!-- 版本号 -->
+        <revision>3.2.0-SNAPSHOT</revision>
         <!-- 编译 -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -45,18 +45,17 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <!-- spring boot、spring cloud -->
-        <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
-        <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
+        <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
+        <spring-cloud.version>Greenwich.SR2</spring-cloud.version>
         <security.auth.version>2.3.5.RELEASE</security.auth.version>
-        <spring-boot-admin.version>2.1.3</spring-boot-admin.version>
+        <spring-boot-admin.version>2.1.6</spring-boot-admin.version>
         <spring-cloud-sleuth.version>2.1.0.RELEASE</spring-cloud-sleuth.version>
         <zipkin.version>2.11.3</zipkin.version>
         <swagger.version>2.9.2</swagger.version>
         <fastdfs-client.version>1.26.5</fastdfs-client.version>
         <mysql.connector.version>8.0.13</mysql.connector.version>
-        <!-- common-->
+        <!-- common -->
         <commons-io.version>2.6</commons-io.version>
-        <commons-lang3.version>3.7</commons-lang3.version>
         <commons-collections4.version>4.0</commons-collections4.version>
         <commons-beanutils.version>1.9.2</commons-beanutils.version>
 
@@ -79,6 +78,9 @@
         <docker.registry>registry.cn-hangzhou.aliyuncs.com</docker.registry>
         <docker.namespace>spring-microservice-exam</docker.namespace>
         <scanner.maven.version>3.3.0.603</scanner.maven.version>
+
+        <!-- logstash -->
+        <logstash.version>5.2</logstash.version>
     </properties>
 
     <dependencies>
@@ -141,6 +143,13 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
+
+        <!-- logstash -->
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>${logstash.version}</version>
+        </dependency>
     </dependencies>
 
     <!-- spring cloud base -->
@@ -165,56 +174,56 @@
             <dependency>
                 <groupId>com.github.tangyi</groupId>
                 <artifactId>common-core</artifactId>
-                <version>${project.version}</version>
+                <version>${revision}</version>
             </dependency>
 
             <!-- common-security -->
             <dependency>
                 <groupId>com.github.tangyi</groupId>
                 <artifactId>common-security</artifactId>
-                <version>${project.version}</version>
+                <version>${revision}</version>
             </dependency>
 
             <!-- common-feign -->
             <dependency>
                 <groupId>com.github.tangyi</groupId>
                 <artifactId>common-feign</artifactId>
-                <version>${project.version}</version>
+                <version>${revision}</version>
             </dependency>
 
             <!-- common-log -->
             <dependency>
                 <groupId>com.github.tangyi</groupId>
                 <artifactId>common-log</artifactId>
-                <version>${project.version}</version>
+                <version>${revision}</version>
             </dependency>
 
             <!-- user-service-api -->
             <dependency>
                 <groupId>com.github.tangyi</groupId>
                 <artifactId>user-service-api</artifactId>
-                <version>${project.version}</version>
+                <version>${revision}</version>
             </dependency>
 
             <!-- auth-service-api -->
             <dependency>
                 <groupId>com.github.tangyi</groupId>
                 <artifactId>auth-service-api</artifactId>
-                <version>${project.version}</version>
+                <version>${revision}</version>
             </dependency>
 
             <!-- exam-service-api -->
             <dependency>
                 <groupId>com.github.tangyi</groupId>
                 <artifactId>exam-service-api</artifactId>
-                <version>${project.version}</version>
+                <version>${revision}</version>
             </dependency>
 
             <!-- msc-service-api -->
             <dependency>
                 <groupId>com.github.tangyi</groupId>
                 <artifactId>msc-service-api</artifactId>
-                <version>${project.version}</version>
+                <version>${revision}</version>
             </dependency>
 
             <!-- 管理中心插件  -->
