--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=spring-microservice-exam
 sonar.projectName=spring-microservice-exam
-sonar.projectVersion=3.1.0
+sonar.projectVersion=3.2.0-SNAPSHOT
 sonar.sources=
 sonar.binaries=bin
 sonar.language=java
