--- a/config-service/src/main/resources/config/gateway-service.yml
+++ b/config-service/src/main/resources/config/gateway-service.yml
@@ -110,8 +110,7 @@ swagger:
 preview:
   ignores:
     - api/auth  # 授权服务
-    - register
-    - checkExist
+    - anonymousUser
     - updateInfo
     - updateAvatar
     - attachment
