--- a/docs/deploy/docker-compose.env
+++ b/docs/deploy/docker-compose.env
@@ -79,3 +79,8 @@ TZ=Asia/Shanghai
 
 # elk配置
 LOGSTASH_HOST=localhost:5044
+
+# 微信配置
+WX_APP_ID=test
+WX_APP_SECRET=test
+WX_GRANT_TYPE=authorization_code
