--- a/modules/exam-service-parent/exam-service-api/pom.xml
+++ b/modules/exam-service-parent/exam-service-api/pom.xml
@@ -30,5 +30,11 @@
             <groupId>com.github.tangyi</groupId>
             <artifactId>common-feign</artifactId>
         </dependency>
+
+        <!-- user-service-api -->
+        <dependency>
+            <groupId>com.github.tangyi</groupId>
+            <artifactId>user-service-api</artifactId>
+        </dependency>
     </dependencies>
 </project>
