--- a/docs/deploy/docker-compose.env
+++ b/docs/deploy/docker-compose.env
@@ -84,3 +84,6 @@ LOGSTASH_HOST=localhost:5044
 WX_APP_ID=test
 WX_APP_SECRET=test
 WX_GRANT_TYPE=authorization_code
+
+# 附件上传配置
+ATTACH_PATH=/attach
