--- a/config-service/src/main/resources/config/user-service.yml
+++ b/config-service/src/main/resources/config/user-service.yml
@@ -112,6 +112,9 @@ sys:
   defaultAvatar: /static/img/avatar/
   key: '1234567887654321'
   cacheExpire: 86400 # 缓存失效时间，单位秒，默认一天
+  attachtUploadType: 1  # 上传类型，1：本地目录，2：fastDfs，3：七牛云
+  attachPath: ${ATTACH_PATH:C:/attach} # 附件上传目录
+  canPreview: jpg,png,jpeg,gif # 支持预览的格式
 
 # feign相关配置
 feign:
@@ -158,6 +161,7 @@ ignore:
     - /v1/menu/anonymousUser/**
     - /v1/code/**
     - /v1/attachment/download
+    - /v1/attachment/preview
     - /v1/log/**
     - /authentication/**
     - /v1/authentication/**
