--- a/config-service/src/main/resources/config/gateway-service.yml
+++ b/config-service/src/main/resources/config/gateway-service.yml
@@ -117,6 +117,9 @@ ignore:
     - /
     - /error
     - /favicon.ico
+    - /csrf
+    - /*swagger*/**
+    - /**/*swagger*/**
     - /actuator/**
     - /api/auth/**
     - /api/user/**
