1. Correct the maven coordinates of QRCode artifacts to correct ones. 2. Add a Centit maven repository since the QRCode libraries are now located in Centit.

--- a/common/common-core/pom.xml
+++ b/common/common-core/pom.xml
@@ -140,5 +140,9 @@
             <groupId>QRCode</groupId>
             <artifactId>QRCode</artifactId>
         </dependency>
+        <dependency>
+            <groupId>QRCode</groupId>
+            <artifactId>QRCode_swetake</artifactId>
+        </dependency>
     </dependencies>
 </project>
