--- a/config-repo/application.yml
+++ b/config-repo/application.yml
@@ -15,8 +15,8 @@ mybatis:
   type-aliases-package: com.github.tangyi.api
   configuration:
     map-underscore-to-camel-case: true
-    lazy-loading-enabled: true
-  mapper-locations: classpath*:mapper/**/*.xml
+  mapper-locations: classpath*:mappers/**/*.xml
+
 pagehelper:
   helperDialect: mysql
   reasonable: true
