--- a/sg-job/build.gradle
+++ b/sg-job/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation 'net.javacrumbs.shedlock:shedlock-core:4.5.0'
     implementation 'net.javacrumbs.shedlock:shedlock-spring:4.5.0'
     implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:4.5.0'
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.5'
 }
 
 test {
