--- a/frontend/sg-exam-next-admin/package.json
+++ b/frontend/sg-exam-next-admin/package.json
@@ -69,7 +69,9 @@
     "vue-router": "^4.0.12",
     "vue-types": "^4.1.1",
     "vue3-video-play": "^1.3.1-beta.6",
-    "xlsx": "^0.18.3"
+    "xlsx": "^0.18.3",
+    "@types/spark-md5": "^3.0.2",
+    "spark-md5": "^3.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^14.1.0",
@@ -143,7 +145,8 @@
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vite-plugin-windicss": "^1.8.4",
     "vue-eslint-parser": "^8.3.0",
-    "vue-tsc": "^0.33.9"
+    "vue-tsc": "^0.33.9",
+    "@types/md5": "^2.3.2"
   },
   "resolutions": {
     "//": "Used to install imagemin dependencies, because imagemin may not be installed in China. If it is abroad, you can delete it",
