--- a/frontend/sg-exam-next-app/package.json
+++ b/frontend/sg-exam-next-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sg-exam-next-app",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "private": true,
   "description": "sg-exam-next-app",
   "templateInfo": {
@@ -76,5 +76,8 @@
     "unplugin-vue-components": "^0.23.0",
     "vue-loader": "^17.0.0",
     "webpack": "5.69.0"
+  },
+  "resolutions": {
+    "@swc/core": "1.3.42"
   }
 }
