--- a/sg-user-service/build.gradle
+++ b/sg-user-service/build.gradle
@@ -43,6 +43,7 @@ dependencies {
         exclude group: 'org.slf4j', module: 'slf4j-simple'
     }
     implementation 'com.github.kstyrc:embedded-redis:0.6'
+    implementation 'io.minio:minio:8.5.1'
 }
 
 test {
