Add MinIO config

--- a/config-repo/env/sg-user-service.env
+++ b/config-repo/env/sg-user-service.env
@@ -1,4 +1,4 @@
-JAVA_OPTS=-XX:+UnlockExperimentalVMOptions -XX:+UseZGC -Xms2g -Xmx6g
+JAVA_OPTS=-XX:+UnlockExperimentalVMOptions -XX:+UseZGC -Xms64m -Xmx512m
 
 SPRING_PROFILES_ACTIVE=docker
 SPRING_CONFIG_LOCATION=file:/config-repo/application.yml,file:/config-repo/sg-user-service.yml
@@ -9,11 +9,21 @@ SG_DB_USER_POST=3306
 SG_DB_USER_USERNAME=root
 SG_DB_USER_PASSWORD=123456
 
-# 七牛云存储
+# 1：使用七牛云存储
+# 2：使用 MinIO 存储
+ATTACH_DEFAULT_STORAGE_TYPE=1
+
+# 七牛云存储配置
 QINIU_ACCEESS_KEY=11111
 QINIU_SECRET_KEY=11111-X3c
 QINIU_DOMAIN=https://abc.com
 QINIU_BUCKET=11111
+
+# MinIO 存储配置
+MINIO_ENDPOINT=http://127.0.0.1:9000
+MINIO_BUCKET=exam
+MINIO_ACCESS_KEY=RRARTf5uR2W1JIUWXNay
+MINIO_SECRET_KEY=ykb7gofzWK8DLEtti65Zsk6TcSLdHn85zfSvwX44
 
 # 阿里云短信服务
 SMS_APP_KEY=11111
