--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,9 @@ subprojects {
         implementation 'org.springdoc:springdoc-openapi-ui:1.6.8'
         implementation 'com.github.axet:kaptcha:0.0.9'
         implementation 'com.qiniu:qiniu-java-sdk:7.13.1'
+        implementation 'org.apache.lucene:lucene-core:8.9.0'
+        implementation 'org.apache.lucene:lucene-analyzers-common:8.9.0'
+        implementation 'com.jianggujin:IKAnalyzer-lucene:8.0.0'
         compileOnly 'org.projectlombok:lombok:1.18.24'
         annotationProcessor 'org.projectlombok:lombok:1.18.24'
         implementation 'com.h2database:h2:2.1.212'
