--- a/sg-common/build.gradle
+++ b/sg-common/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     implementation 'tk.mybatis:mapper-spring-boot-starter:4.2.1'
     implementation 'io.jsonwebtoken:jjwt:0.9.0'
     implementation 'io.micrometer:micrometer-registry-prometheus:1.9.0'
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.5'
 }
