MinIO 支持替换访问域名

--- a/config-repo/nginx/nginx_ssl.conf
+++ b/config-repo/nginx/nginx_ssl.conf
@@ -34,6 +34,17 @@ http {
             proxy_pass http://sg-user-service;
         }
 
+        location ~* /attach-storage {
+            proxy_pass http://127.0.0.1:9000;
+            proxy_connect_timeout   600;
+            proxy_read_timeout   600;
+            rewrite "^/attach-storage/(.*)$" /$1 break;
+        }
+
+        location /onlinePreview {
+            proxy_pass http://kkFileView:8012/onlinePreview;
+        }
+
         location / {
 
         }
