--- a/config-repo/env/sg-user-service.env
+++ b/config-repo/env/sg-user-service.env
@@ -24,6 +24,7 @@ MINIO_ENDPOINT=http://127.0.0.1:9000
 MINIO_BUCKET=exam
 MINIO_ACCESS_KEY=RRARTf5uR2W1JIUWXNay
 MINIO_SECRET_KEY=ykb7gofzWK8DLEtti65Zsk6TcSLdHn85zfSvwX44
+MINIO_ACCESS_DOMAIN=
 
 # 阿里云短信服务
 SMS_APP_KEY=11111
