启动脚本、docker-compose.yml 优化

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - "4004:4004"
     volumes:
       - ./config-repo/:/config-repo/
+      - ./logs/:/logs/
 
   redis:
     image: redis:latest
