--- a/frontend/sg-exam-app/package.json
+++ b/frontend/sg-exam-app/package.json
@@ -36,7 +36,8 @@
     "vue-video-player": "^5.0.2",
     "vue2-animate": "^2.1.0",
     "vue2-countdown": "^1.0.8",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/babel-core": "^6.25.6",
