--- a/config-repo/sg-user-service.yml
+++ b/config-repo/sg-user-service.yml
@@ -87,7 +87,7 @@ spring:
   datasource:
     url: jdbc:mysql://${SG_DB_USER_HOST:localhost}:${SG_DB_USER_POST:3306}/${SG_DB_USER_NAME:sg-exam-user}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=CTT&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false&allowPublicKeyRetrieval=true
     type: com.zaxxer.hikari.HikariDataSource
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${SG_DB_USER_USERNAME:root}
     password: ${SG_DB_USER_PASSWORD:123456}
     hikari:
@@ -115,7 +115,7 @@ spring:
   datasource:
     url: jdbc:mysql://${SG_DB_USER_HOST}:${SG_DB_USER_POST}/sg-exam-user?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=CTT&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false&allowPublicKeyRetrieval=true
     type: com.zaxxer.hikari.HikariDataSource
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${SG_DB_USER_USERNAME:root}
     password: ${SG_DB_USER_PASSWORD:123456}
     hikari:
