improvement: 代码优化 0111 #I8URO

--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ subprojects {
         compileOnly 'org.projectlombok:lombok:1.18.24'
         annotationProcessor 'org.projectlombok:lombok:1.18.24'
         implementation 'com.wix:wix-embedded-mysql:4.6.1'
+        implementation 'it.unimi.dsi:fastutil:8.5.6'
         testImplementation 'junit:junit:4.13.2'
         testImplementation 'uk.org.webcompere:system-stubs-jupiter:2.0.2'
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
