--- a/sg-common/build.gradle
+++ b/sg-common/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt:0.9.0'
     implementation 'io.micrometer:micrometer-registry-prometheus:1.9.0'
     implementation 'com.github.ben-manes.caffeine:caffeine:3.1.5'
+    implementation 'it.unimi.dsi:fastutil:8.5.6'
 }
