--- a/sg-exam-service/build.gradle
+++ b/sg-exam-service/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation(project(':sg-common'))
     implementation 'com.alibaba:fastjson:1.2.70'
     implementation 'tk.mybatis:mapper-spring-boot-starter:4.2.1'
+    implementation 'it.unimi.dsi:fastutil:8.5.6'
 }
 
 test {
