--- a/sg-user-service/build.gradle
+++ b/sg-user-service/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.github.kstyrc:embedded-redis:0.6'
     implementation 'io.minio:minio:8.5.1'
     implementation 'com.github.ben-manes.caffeine:caffeine:3.1.5'
+    implementation 'it.unimi.dsi:fastutil:8.5.6'
 }
 
 test {
