--- a/frontend/sg-exam-app/.env
+++ b/frontend/sg-exam-app/.env
@@ -1,4 +1,4 @@
 # 本地开发请求后端服务地址配置
-USER_SERVICE_HOST=yunmianshi.com.cn
-USER_SERVICE_PORT=80
+USER_SERVICE_HOST=127.0.0.1
+USER_SERVICE_PORT=9183
 ENCRYPTION_KEY=1234567887654321
