--- a/sg-user-service/src/test/resources/test.env
+++ b/sg-user-service/src/test/resources/test.env
@@ -1,5 +1,6 @@
+ENABLE_EMBEDDED_MYSQL=true
 SG_DB_USER_HOST=127.0.0.1
 SG_DB_USER_NAME=sg-exam-user
-SG_DB_USER_USERNAME=root
+SG_DB_USER_USERNAME=sg
 SG_DB_USER_PASSWORD=123456
 SEND_SMS=false
