--- a/config-repo/sg-user-service.yml
+++ b/config-repo/sg-user-service.yml
@@ -67,6 +67,21 @@ wxh5:
 
 sys:
   cacheExpire: 86400 # 缓存失效时间，单位秒，默认一天
+  loadConfigs:
+    - sys_web_name
+    - sys_web_main_title
+    - sys_web_sub_title_one
+    - sys_web_sub_title_two
+    - sys_web_copyright
+    - sys_web_show_banner
+    - sys_avatar
+    - sys_admin_main_title
+    - sys_admin_sub_title
+    - sys_wxapp_avatar
+    - sys_wxapp_main_title
+    - sys_wxapp_sub_title
+    - sys_login_show_tenant_code
+    - sys_file_preview_url
 
 gen:
   author: tangyi
@@ -108,7 +123,7 @@ spring:
 server:
   port: ${SERVER_PORT:80}
   ssl:
-    enabled: ${SG_SSL_ENABLED:false}  # 默认为false
+    enabled: ${SG_SSL_ENABLED:false}  # 默认为 false
     key-store: ${SG_SSL_STORE}  #类路径下的自签证书
     key-alias: ${SG_SSL_ALIAS} # 证书别名
     key-store-password: ${SG_SSL_PASSWORD} #证书密码
