--- a/frontend/sg-exam-app/.env
+++ b/frontend/sg-exam-app/.env
@@ -1,4 +1,5 @@
-# 本地开发请求后端服务地址配置
-USER_SERVICE_HOST=127.0.0.1
-USER_SERVICE_PORT=9183
-ENCRYPTION_KEY=1234567887654321
+VUE_APP_TENANT_CODE=gitee
+VUE_APP_I18N_LOCAL=en
+VUE_APP_API_CONTEXT_PATH=/sg-user-service
+VUE_APP_WEB_HOST=localhost
+VUE_APP_WEB_PORT=8080
