--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 SG_EXAM_REGISTRY=registry.cn-hangzhou.aliyuncs.com/sg-exam-next
 SG_EXAM_VERSION=0.0.13
+
+MYSQL_SERVICE_ROOT_PASSWORD=123456
+MYSQL_SERVICE_DATABASE=sg-exam-user
+MYSQL_SERVICE_TZ=Asia/Shanghai
