--- a/config-repo/nginx/nginx.conf
+++ b/config-repo/nginx/nginx.conf
@@ -21,18 +21,14 @@ http {
         }
 
         location ~* /sg-user-service {
-            proxy_pass http://sg-user-service;
+            proxy_pass http://localhost:8080;
         }
 
         location ~* /attach-storage {
-            proxy_pass http://127.0.0.1:9000;
+            proxy_pass http://minio-service:9000;
             proxy_connect_timeout   600;
             proxy_read_timeout   600;
             rewrite "^/attach-storage/(.*)$" /$1 break;
-        }
-
-        location /onlinePreview {
-            proxy_pass http://kkFileView:8012/onlinePreview;
         }
 
         location / {
