--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SG_EXAM_REGISTRY=registry.cn-hangzhou.aliyuncs.com/sg-exam-next
-SG_EXAM_VERSION=0.0.13
+SG_EXAM_VERSION=0.0.14
 
 # JVM 默认参数
 # JVM 内存配置较小，默认为 64m，最大 512m，可按需调整
@@ -40,8 +40,8 @@ QINIU_BUCKET=11111
 # 默认使用外部部署 MinIO，默认采用 docker 方式部署，服务名是 minio-service
 MINIO_ENDPOINT=http://minio-service:9000
 MINIO_BUCKET=sg-exam
-MINIO_ACCESS_KEY=sg-exam
-MINIO_SECRET_KEY=sg-exam123456
+MINIO_ACCESS_KEY=admin
+MINIO_SECRET_KEY=admin123456
 # 注意不要以反斜杠结尾
 MINIO_ACCESS_DOMAIN=http://localhost/attach-storage
 
