--- a/config-repo/nginx/nginx.conf
+++ b/config-repo/nginx/nginx.conf
@@ -1,6 +1,6 @@
 user nginx;
 worker_processes  2;
-error_log  /var/log/nginx/error.log warn;
+error_log  /apps/data/web/working/logs/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 events {
     use epoll;
@@ -10,6 +10,7 @@ http {
     include  /etc/nginx/mime.types;
     root /usr/share/nginx/html;
     index  index.html;
+    access_log /apps/data/web/working/logs/nginx/access.log;
 
     server {
         listen 80;
