--- a/config-repo/nginx/nginx_ssl.conf
+++ b/config-repo/nginx/nginx_ssl.conf
@@ -13,18 +13,22 @@ http {
     access_log /apps/data/web/working/logs/nginx/access.log;
 
     server {
-        listen 443  ssl http2;
-        server_name  www.yunmianshi.com.cn;
+        listen       80;
+        server_name  yunmianshi.com.cn www.yunmianshi.com.cn;
+        return 301 https://$server_name$request_uri;
+    }
 
-        client_max_body_size 4M;
+    server {
+        listen       443 ssl;
+        server_name  yunmianshi.com.cn www.yunmianshi.com.cn;
 
-        ssl on;
-        ssl_certificate /etc/nginx/cert/7438574_www.yunmianshi.com.cn.pem;
-        ssl_certificate_key  /etc/nginx/cert/7438574_www.yunmianshi.com.cn.key;
-        ssl_session_timeout 5m;
-        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
-        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-        ssl_prefer_server_ciphers on;
+        ssl_certificate     /etc/nginx/cert/ssl.pem;  # pem文件的路径
+        ssl_certificate_key  /etc/nginx/cert/ssl.key; # key文件的路径
+
+        ssl_session_timeout  5m;    #缓存有效期
+        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;    #加密算法
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;    #安全链接可选的加密协议
+        ssl_prefer_server_ciphers on;   #使用服务器端的首选算法
 
         location /admin {
             alias  /usr/share/nginx/html/admin;
@@ -32,7 +36,7 @@ http {
         }
 
         location ~* /sg-user-service {
-            proxy_pass http://sg-user-service;
+            proxy_pass http://localhost:8080;
         }
 
         location ~* /attach-storage {
@@ -45,16 +49,5 @@ http {
         location / {
 
         }
-
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
-    }
-
-    server {
-        listen       80;
-        server_name  www.yunmianshi.com.cn;
-        return 301 https://$host$request_uri;
     }
 }
