--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,8 @@ services:
       - "80:80"
       - "8080:8080"
     volumes:
+      - ./config-repo/nginx/cert:/etc/nginx/cert/
+      - ./config-repo/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./logs/:/apps/data/web/working/logs/
     depends_on:
       - mysql-service
