improvement: Update .env

--- a/.env
+++ b/.env
@@ -42,7 +42,10 @@ MINIO_ENDPOINT=http://minio-service:9000
 MINIO_BUCKET=sg-exam
 MINIO_ACCESS_KEY=admin
 MINIO_SECRET_KEY=admin123456
-# 注意不要以反斜杠结尾
+
+# 配置前端访问 MinIO 文件的地址
+# 这个比较重要，一般是需要配置的，如部署到服务器上，需要配置成服务器的 IP + 端口号
+# 注意不要以反斜杠结尾！！！
 MINIO_ACCESS_DOMAIN=http://localhost/attach-storage
 
 # 阿里云短信服务，非必须
