improvement: 调整文件上传大小限制

--- a/config-repo/nginx/nginx_ssl.conf
+++ b/config-repo/nginx/nginx_ssl.conf
@@ -11,6 +11,8 @@ http {
     root /usr/share/nginx/html;
     index  index.html;
     access_log /apps/data/web/working/logs/nginx/access.log;
+    client_max_body_size 1024m;
+    sendfile on;
 
     server {
         listen       80;
