--- a/config-repo/sg-user-service.yml
+++ b/config-repo/sg-user-service.yml
@@ -95,8 +95,8 @@ gen:
   tablePrefix:
 exam:
   image:
-    CourseImageUrl: ${EXAM_COURSE_IMAGE_URL:https://images3.alphacoders.com/133/thumb-440-1337500.webp}
-    ExaminationImageUrl: ${EXAM_EXAMINATION_IMAGE_URL:https://images4.alphacoders.com/132/thumb-440-1323467.webp}
+    CourseImageUrl: ${EXAM_COURSE_IMAGE_URL:https://gitee.com/wells2333/sg-exam/raw/master/docs/images/default_bg1.png}
+    ExaminationImageUrl: ${EXAM_EXAMINATION_IMAGE_URL:https://gitee.com/wells2333/sg-exam/raw/master/docs/images/default_bg1.png}
 
 ---
 server:
