--- a/frontend/sg-exam-app/package.json
+++ b/frontend/sg-exam-app/package.json
@@ -21,6 +21,7 @@
     "js-cookie": "^2.2.0",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
+    "pdfjs-dist": "^2.5.207",
     "sass": "^1.56.1",
     "uuid": "^8.3.2",
     "videojs-contrib-hls": "^5.14.1",
@@ -28,7 +29,7 @@
     "vue-count-to": "^1.0.13",
     "vue-fixed-header": "^3.2.14",
     "vue-i18n": "^8.28.2",
-    "vue-pdf": "^4.3.0",
+    "vue-pdf": "^4.2.0",
     "vue-router": "^3.0.1",
     "vue-spinkit": "^1.4.1",
     "vue-video-player": "^5.0.2",
